 - Fix: Sometimes messes up the tab order on reconnect (Gabor Szeder)
   [941773].
 - Fix: Crashes when setting $CHARSET to nonexistant charset [945855].
 - Plugin API: Added some fields to the "channels" list.
 - Plugin API: Added "win_status" and "xchatdirfs" fields to
   xchat_get_info.
 - Fix: Unload, then reload a plugin on FreeBSD fails (Kevin Leung).
 - Plugins should now work on HPUX too.
 - Perl-plugin changes <fixme> (Lian Situ).
 - Make menu keybindings work when the menubar is hidden on GTK 2.4.
 - Support the new GTK 2.4 file chooser dialog.
 - 
 - 
 - Smaller bug fixes [950353] [945617] (Frederic Krueger).


----------------------------------------------------------------------
 2.0.8
----------------------------------------------------------------------

 - Updated translations (az, es, fi, lt, mk, nl, ru, sk, sl, sr, sv,
   zh_CN).
 - Added color, flash and iconify args to /GUI command (this is for
   use in scripts and plugins only).
 - Plugin API: Added "notify" list.
 - Plugin API: Added id, users, flags fields for "channels" list.
 - Win32: Better error messages for file i/o and winsock errors.
 - New Perl interface (with backward compatibility)! (Lian Situ).
 - Fixed command-character buglet [873541].
 - Win32: Improved incorrect CPS display for file transfers.
 - Added "Copy Selected URL" option to URL popupmenu (Mike Battersby).
 - Added work-around for "Get my IP from server" not working on PTNet
   (Mario Freitas).
 - Fixed: Alt+numbers do not work with X Input Method [896968] (Marius
   Gedminas).
 - Added support for "+port" to indicate SSL connections.
 - Fixed non-ASCII chars in time-stamp bug [918445].
 - Smaller bug fixes: [870073] [890891].


----------------------------------------------------------------------
 2.0.7
----------------------------------------------------------------------

 - Updated translations (fi, nl).
 - Fixed dcc psend crash [858539].
 - Fixed bug where an error message was erroneously displayed while