@@ -10,7 +10,7 @@ AM_PROG_AS
 AM_DISABLE_STATIC
 AM_PROG_LIBTOOL
 
-ALL_LINGUAS="am az ca cs de el es et fi fr ja lt lv mk ms nl no pt ru sk sl sr sv uk zh_CN"
+ALL_LINGUAS="am az ca cs de el en_GB es et eu fi fr ja lt lv mk ms nl no pt ru sk sl sr sv uk wa zh_CN"
 AM_GNU_GETTEXT
 
 dnl displaced from acconfig.h
